--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -12,7 +12,8 @@
         android:id="@+id/searchBarText"
         android:inputType="text"
         android:maxLines="1"
-        android:text="@string/search_text_input"
+        android:focusableInTouchMode="true"
+        android:hint="@string/search_text_input"
         android:layout_margin="4dp"/>
 
     <android.support.v7.widget.RecyclerView
